infrastructure/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-app-template
  labels:                   
    app: next-app
spec:
  selector:
    matchLabels:
      app: next-app
  template:
    metadata:
      labels:
        app: next-app
    spec:
      containers:
      - name: nextapp
        image: next-app-template
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "100m"
            memory: "120Mi"
          requests:
            cpu: "50m"
            memory: "60Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 30
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 30
        ports:
        - containerPort: 3000
      restartPolicy: Always
