infrastructure/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: next-app-service
spec:
  selector:
    app: next-app
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
