infrastructure/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-next-service
  labels:
    name: ingress-next-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
   ingressClassName: nginx
   rules:
     - host: "next-app.com"
       http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: next-app-service
                port:
                  number: 3000
